<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_take"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_16"
        android:text="@string/chose_goods_photo"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_F2F2F2"/>
    <TextView
        android:id="@+id/tv_chose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_16"
        android:text="@string/chose_goods_photo_chose"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/color_F2F2F2"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_16"
        android:text="@string/chose_goods_photo_cancel"
        android:gravity="center"/>
</LinearLayout>