<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_main_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_15"
        android:text="@string/question"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_16" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_EAEAEA"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_17"
                    android:paddingTop="@dimen/dp_18"
                    android:paddingRight="@dimen/dp_17"
                    android:paddingBottom="@dimen/dp_42">

                    <TextView
                        android:id="@+id/tv_label_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp_19"
                        android:text="@string/question_label_a"
                        android:textColor="@color/color_000000"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_details_a"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_15"
                        android:text="@string/question_details_b"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_15"
                        android:text="@string/question_details_c"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_15"
                        android:text="@string/question_details_d"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_17"
                    android:paddingTop="@dimen/dp_18"
                    android:paddingRight="@dimen/dp_17"
                    android:paddingBottom="@dimen/dp_42">

                    <TextView
                        android:id="@+id/tv_label_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp_19"
                        android:text="@string/question_label_a"
                        android:textColor="@color/color_000000"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_details_e"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_15"
                        android:text="@string/question_details_f"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/sp_12" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="@dimen/dp_146"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_34"
                android:background="@drawable/bg_check_name_border_sure"
                android:gravity="center"
                android:text="@string/question_conn_cus"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>