<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dp_50"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_17"
        android:paddingRight="@dimen/dp_17">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_left_notify_title"
            android:layout_weight="1"
            android:textColor="@color/color_252525"
            android:textSize="@dimen/sp_18"
            />
        <ImageView
            android:id="@+id/iv_left_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@mipmap/icon_cancel"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:id="@+id/line_a"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_EAEAEA"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="@dimen/dp_15"

        />

    <TextView
        android:id="@+id/tv_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_left_notify_sell"
        android:textColor="@color/color_252525"
        android:textSize="@dimen/sp_14"
        android:paddingLeft="@dimen/dp_17"
        android:layout_below="@+id/line_a"
        android:paddingTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_25"
        android:layout_centerVertical="true"
        />

    <View
        android:id="@+id/line_b"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_EAEAEA"
        android:layout_below="@+id/tv_sell"

        android:layout_marginLeft="@dimen/dp_17"
        android:layout_marginRight="@dimen/dp_17"
        />
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_left_notify_price"
        android:textColor="@color/color_252525"
        android:textSize="@dimen/sp_14"
        android:paddingLeft="@dimen/dp_17"
        android:paddingTop="@dimen/dp_25"
        android:layout_below="@+id/line_b"
        android:paddingBottom="@dimen/dp_25"
        />
    <View
        android:id="@+id/line_c"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_EAEAEA"
        android:layout_below="@+id/tv_price"

        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_marginRight="@dimen/dp_17"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/color_f1f1f1"
        >
        <TextView
            android:id="@+id/tv_find"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51"
            android:paddingLeft="@dimen/dp_17"
            android:gravity="center_vertical"
            android:text="@string/main_left_notify_story"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_252525">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_EAEAEA"
            />
        <TextView
            android:id="@+id/tv_conn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51"
            android:paddingLeft="@dimen/dp_17"
            android:gravity="center_vertical"
            android:text="@string/main_left_notify_conn"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_252525">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_EAEAEA"
            />
        <TextView
            android:id="@+id/tv_notify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51"
            android:paddingLeft="@dimen/dp_17"
            android:gravity="center_vertical"
            android:text="@string/main_left_notify_notify"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_252525">
        </TextView>

    </LinearLayout>
    
    


</RelativeLayout>